# AI_Agents

./: README.md  app.py
CodebaseQAAssistant/: Readme  Readme.md  app.py  retriever.py  tools.py
PersonalKnowledgeAssistant/: README.md  app.py  requirement.txt  retriever.py  tools.py
ReasearcherAgent/: README.md  pyproject.toml
ReasearcherAgent/db/: chroma.sqlite3
ReasearcherAgent/src/ticket_routing_crew/: crew.py  main.py
ReasearcherAgent/src/ticket_routing_crew/config/: agents.yaml  tasks.yaml
ReasearcherAgent/src/ticket_routing_crew/tools/: arvix_tool.py  crtic_tool.py  pubmed_tool.py
