[project]
name = "ticket_routing_crew"
version = "0.1.0"
description = "Ticket_routing_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
ticket_routing_crew = "ticket_routing_crew.main:run"
run_crew = "ticket_routing_crew.main:run"
train = "ticket_routing_crew.main:train"
replay = "ticket_routing_crew.main:replay"
test = "ticket_routing_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
